src/objects/Task2__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>対応内容</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>優先度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>高</fullName>
                </value>
                <value>
                    <fullName>中</fullName>
                </value>
                <value>
                    <fullName>低</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>タスク状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未完了</fullName>
                </value>
                <value>
                    <fullName>完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>タスク</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_Task2</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GroupTask_Task2</fullName>
        <filterScope>Queue</filterScope>
        <label>タスク用テストキュー</label>
        <queue>GroupTask</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>タスク番号</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>RT1</fullName>
        <active>true</active>
        <label>RT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT2</fullName>
        <active>true</active>
        <label>RT2</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>